--- a/index.html
+++ b/index.html
@@ -9,31 +9,40 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="./styles/normalize.css">
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div>
+    <main>
+      <div>
+        <img src="./images/illustration-hero.svg" alt="illustration-hero">
+      </div>
+      <section>
+        <div>
+          <h1>Order Summary</h1>
+        </div>
+        <div>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
+          </p>
+        </div>
+        <div>
+          <div>
+            <img src="./images/icon-music.svg" alt="icon-music">
+          </div>
+          <div>
+            <span>Annual Plan</span>
+            <span>$59.99/year</span>
+          </div>
+          <div>
+            <a href="#">Change</a>
+          </div>
+        </div>
+        <div>
+          <a href="#"> Proceed to Payment</a>
+          <a href="#">Cancel order</a>
+        </div>
+      </section>
+    </main>
   </div>
 </body>
 </html>
