feat: add styles to index.html

--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
   <link rel="stylesheet" href="./styles/normalize.css">
 </head>
 <body>
-  <div>
-    <main>
+  <div class="background container p-2 h-min">
+    <main class="bg-white radius overflow-hidden text-center w-50-md w-40-lg w-30-xl box-shadow">
       <div>
-        <img src="./images/illustration-hero.svg" alt="illustration-hero">
+        <img src="./images/illustration-hero.svg" alt="illustration-hero" class="w-100">
       </div>
-      <section>
+      <section class="p-3 text-dark-blue">
         <div>
-          <h1>Order Summary</h1>
+          <h1 class="m-0 bolder" style="font-size: 1.75rem;">Order Summary</h1>
         </div>
-        <div>
-          <p>
+        <div class="mt-2 text-desaturated-blue">
+          <p class="m-0">
             You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
           </p>
         </div>
-        <div>
+        <div class="mt-2 bg-very-pale-blue radius p-2 container space-between">
           <div>
             <img src="./images/icon-music.svg" alt="icon-music">
           </div>
-          <div>
-            <span>Annual Plan</span>
-            <span>$59.99/year</span>
+          <div class="text-left">
+            <span class="d-block bolder">Annual Plan</span>
+            <span class="d-block text-desaturated-blue">$59.99/year</span>
           </div>
           <div>
-            <a href="#">Change</a>
+            <a href="#" class="text-bright-blue bolder">Change</a>
           </div>
         </div>
-        <div>
-          <a href="#"> Proceed to Payment</a>
-          <a href="#">Cancel order</a>
+        <div class="mt-2">
+          <a href="#" class="button bg-bright-blue text-light w-100"> Proceed to Payment</a>
+          <a href="#" class="button w-100 bolder text-desaturated-blue">Cancel order</a>
         </div>
       </section>
     </main>
