feat: add shadows to buttons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="mt-2">
-          <a href="#" class="button bg-bright-blue text-light w-100"> Proceed to Payment</a>
+          <a href="#" class="button radius bg-bright-blue text-light w-100 box-shadow"> Proceed to Payment</a>
           <a href="#" class="button w-100 bolder text-desaturated-blue">Cancel order</a>
         </div>
       </section>
